# components

./: .gitmodules  CMakeLists.txt
app/: all_reduce.cpp  exp_contraction.cpp
lib/data_structures/: semidynamic_graph.h  static_graph.h
lib/io/: connect_io.h  graph_io.h  io_utils.h
